chore: don't rely on gatling.conf